# SkripnikovOV_CourseProj_4_SkyPro

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailings/: forms.py  mixins.py  models.py  urls.py  views.py
mailings/management/commands/: create_groups.py  send_mailings.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_options_alter_mailing_options_and_more.py
mailings/templates/mailings/: attempt_list.html  base.html  client_confirm_delete.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html  statistics.html
mailings/templates/mailings/includes/: pagination.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  logout.html  profile.html  register.html
